Webclient - Use correct stylesheet in index.html + fix vertical alignment of cover image in albums view

--- a/webclient/sinatra/source/css/master.css
+++ b/webclient/sinatra/source/css/master.css
@@ -152,6 +152,8 @@ body, input {
 .album .cover {
     min-height: 200px;
     max-height: 200px;
+    display: table;
+    vertical-align: top;
 }
 
 .album .cover img {
